Fix text size on mobile and URL parameter parsing

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -26,7 +26,7 @@ h1 {
     font-weight: bold;
 }
 
-#hand_div p {
+p {
     font-size: 6vh;
 }
 
